[gd_scene load_steps=2 format=3 uid="uid://dfhl0rkt87v0q"]

[ext_resource type="Script" path="res://addons/zl_init_plugin/addonScript.gd" id="1_jni07"]

[node name="AddonDock" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jni07")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="folderTree" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Create 3d Folder Tree"

[node name="firstPersonChar" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Create1person"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="VBoxContainer/folderTree" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/firstPersonChar" to="." method="_on_first_person_char_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
